# public/docs/openapi.yaml
@@ -83,7 +83,7 @@ paths:
                 activity_id:
                   type: integer
                   description: ''
-                  example: 12
+                  example: 7
               required:
                 - activity_id
       security: []
@@ -106,11 +106,11 @@ paths:
                 phone:
                   type: string
                   description: 'The phone number of the user.'
-                  example: culpa
+                  example: non
                 password:
                   type: string
                   description: 'The password of the user.'
-                  example: 'ZinkV<*+Q`klo'
+                  example: '{Zn~=F(B,oVD"f{L'
               required:
                 - phone
                 - password
@@ -134,19 +134,14 @@ paths:
                 name:
                   type: string
                   description: 'The phone number of the user.'
-                  example: nisi
+                  example: dolores
                 phone:
                   type: string
                   description: 'The password of the user.'
-                  example: blanditiis
-                birthday:
-                  type: date
-                  description: 'The birthday of the user. Format (Y-m-d).'
-                  example: enim
+                  example: aspernatur
               required:
                 - name
                 - phone
-                - birthday
       security: []
   /api/auth/password-reset:
     post:
@@ -167,9 +162,32 @@ paths:
                 phone:
                   type: string
                   description: 'The phone number of the user.'
-                  example: molestias
+                  example: maiores
               required:
                 - phone
+      security: []
+  /api/auth/verify/code:
+    post:
+      summary: ''
+      operationId: postApiAuthVerifyCode
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                code:
+                  type: string
+                  description: 'The phone number of the user.'
+                  example: iusto
+              required:
+                - code
       security: []
   /api/blog/list:
     get:
@@ -190,7 +208,7 @@ paths:
                       id: 8
                       title: 'Rem rem aut assumend'
                       image: storage/blog_images/0WjyPETNcu4AeYA8fLjbDDnUJAFwsosrUC4EtWez.jpg
-                      content: "The History Of Web Design\r\n                                    While you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.\r\n                                    Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.!The History Of Web Design 1While you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.! asdasd"
+                      content: "The History Of Web Design\r\nWhile you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.\r\nBring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.!\r\n&nbsp;\r\nThe History Of Web Design 1\r\nWhile you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.\r\nBring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.! asdasd"
                       created_at: 14.03.2023
                 properties:
                   blogs:
@@ -200,7 +218,7 @@ paths:
                         id: 8
                         title: 'Rem rem aut assumend'
                         image: storage/blog_images/0WjyPETNcu4AeYA8fLjbDDnUJAFwsosrUC4EtWez.jpg
-                        content: "The History Of Web Design\r\n                                    While you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.\r\n                                    Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.!The History Of Web Design 1While you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.! asdasd"
+                        content: "The History Of Web Design\r\nWhile you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.\r\nBring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.!\r\n&nbsp;\r\nThe History Of Web Design 1\r\nWhile you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.\r\nBring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.! asdasd"
                         created_at: 14.03.2023
                     items:
                       type: object
@@ -216,7 +234,7 @@ paths:
                           example: storage/blog_images/0WjyPETNcu4AeYA8fLjbDDnUJAFwsosrUC4EtWez.jpg
                         content:
                           type: string
-                          example: "The History Of Web Design\r\n                                    While you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.\r\n                                    Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.!The History Of Web Design 1While you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.! asdasd"
+                          example: "The History Of Web Design\r\nWhile you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.\r\nBring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.!\r\n&nbsp;\r\nThe History Of Web Design 1\r\nWhile you want your sales team to be spending most of their time prospecting and selling, making sure they have the time and space to keep the CRM up to date is critical. Remember to factor in time for these tasks when setting goals and benchmarks for them. Provide sales support where you can to ensure your sales team is spending.\r\nBring to the table win-win survival strategies to ensure proactive domination. At the end of the day going forward, a new normal that has evolved.! asdasd"
                         created_at:
                           type: string
                           example: 14.03.2023
@@ -242,7 +260,7 @@ paths:
                 blog_id:
                   type: integer
                   description: ''
-                  example: 6
+                  example: 5
               required:
                 - blog_id
       security: []
@@ -947,7 +965,7 @@ paths:
                 city_id:
                   type: integer
                   description: ''
-                  example: 12
+                  example: 17
               required:
                 - city_id
       security: []
@@ -1151,19 +1169,14 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: commodi
+                  example: itaque
                 phone:
                   type: string
                   description: ''
-                  example: aut
-                birthday:
-                  type: string
-                  description: 'value geçerli bir tarih olmalıdır.'
-                  example: '2023-06-19T01:01:45'
+                  example: dolorem
               required:
                 - name
                 - phone
-                - birthday
       security: []
   /api/customer/update/password:
     post:
@@ -1191,7 +1204,7 @@ paths:
                 password:
                   type: string
                   description: ''
-                  example: aA|PW;w
+                  example: '\@O4?t\D]bbUMK#CH'
               required:
                 - password
       security: []
@@ -1303,22 +1316,22 @@ paths:
           in: query
           name: service_id
           description: ''
-          example: labore
+          example: et
           required: false
           schema:
             type: string
             description: ''
-            example: labore
+            example: et
         -
           in: query
           name: city_id
           description: ''
-          example: quasi
+          example: aliquam
           required: false
           schema:
             type: string
             description: ''
-            example: quasi
+            example: aliquam
       responses: {  }
       tags:
         - Search
@@ -1333,22 +1346,22 @@ paths:
           in: query
           name: category_id
           description: ''
-          example: soluta
-          required: false
-          schema:
-            type: string
-            description: ''
-            example: soluta
-        -
-          in: query
-          name: city_id
-          description: ''
           example: consequuntur
           required: false
           schema:
             type: string
             description: ''
             example: consequuntur
+        -
+          in: query
+          name: city_id
+          description: ''
+          example: occaecati
+          required: false
+          schema:
+            type: string
+            description: ''
+            example: occaecati
       responses: {  }
       tags:
         - Search
@@ -1372,7 +1385,7 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: recusandae
+                  example: temporibus
       security: []
   /api/services/list:
     get:
